Adding new controller & form & beggining of styling form

--- a/src/UrgenceBundle/Resources/config/routing.yml
+++ b/src/UrgenceBundle/Resources/config/routing.yml
@@ -1,3 +1,8 @@
 urgence_homepage:
     path:     /
     defaults: { _controller: UrgenceBundle:Default:index }
+
+urgence_ln:
+    path:     /form
+    defaults: { _controller: UrgenceBundle:Form:index }
+
