ADD : route pour récupérer les données d'une application android ADD : Bouton de debug de la fonction de récupération les données d'une application android

--- a/src/UrgenceBundle/Resources/config/routing.yml
+++ b/src/UrgenceBundle/Resources/config/routing.yml
@@ -13,3 +13,7 @@ urgence_alertsecours:
 urgence_voiralertes:
     path:     /voir-alertes
     defaults: { _controller: UrgenceBundle:Alert:voiralertes }
+        
+urgence_new_alert:
+    path:     /api/new-alerte
+    defaults: { _controller: UrgenceBundle:AndroidCom:newAlert }
