MAJ récupération des alertes puis conversion de ces alertes en GEOJSON

--- a/src/UrgenceBundle/Resources/config/routing.yml
+++ b/src/UrgenceBundle/Resources/config/routing.yml
@@ -17,3 +17,7 @@ urgence_new_alert:
 urgence_testInsert:
     path:     /form/insert
     defaults: { _controller: UrgenceBundle:Form:insert }
+
+urgence_allalerts:
+    path:     /all-alerts
+    defaults: { _controller: UrgenceBundle:Alert:allAlerts }
