ADD : Bouton de nettoyage de la table alerte et public user (route +controller) SUPP : Suppression du bouton de test d'un envoi depuis une appli android

--- a/src/UrgenceBundle/Resources/config/routing.yml
+++ b/src/UrgenceBundle/Resources/config/routing.yml
@@ -21,3 +21,7 @@ urgence_testInsert:
 urgence_allalerts:
     path:     /all-alerts
     defaults: { _controller: UrgenceBundle:Alert:allAlerts }
+    
+urgence_cleardatabase:
+    path:     /clear-datas
+    defaults: { _controller: UrgenceBundle:Alert:clearDatas }
